2000-05-15  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* unposted: Etc/FAQ.yo: updated from website.

2000-05-15  Sven Wischnowsky  <wischnow@zsh.org>

	* 11368: Src/utils.c: fix for empty (s::) separator and strings
 	with meta-characters
	
	* 11365: Src/Zle/zle_tricky.c: fix for completion of string with
 	single quote
	
	* 11364,11367: Completion/Core/_path_files, Src/Zle/compmatch.c:
	fix for suffix-matching; better in-path completion in _path_files
	
2000-05-15  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11362: Doc/Zsh/manual.yo, Doc/Zsh/metafaq.yo, Doc/Zsh/seealso.yo:
	pointers and menu entries for userguide wrong.

2000-05-15  Sven Wischnowsky  <wischnow@zsh.org>

	* 11360: Src/Modules/zutil.c: zparseopts should detect if it is
 	called without option descriptions
	
2000-05-15  Oliver Kiddle  <opk@zsh.org>

	* 11358: Src/builtin.c, Src/hashtable.c, Completion/Builtins/_hash,
	Doc/Zsh/builtins.yo, Completion/Builtins/_vars_eq: add -L opt to hash

2000-05-14  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 11352: Src/builtin.c: make integer builtin understand `-i base'.

	* 11352: Completion/Base/_jobs: typo in suspended jobs.

	* 11352: Doc/Zsh/*: various changes of phrasing.

2000-05-12  Sven Wischnowsky  <wischnow@zsh.org>

	* 11349: Completion/Base/_arguments, Completion/Core/_message,
 	Src/Zle/computil.c: fix for completing options with `_arguments
 	-s'; fix for _message to use `builtin compadd'
	
2000-05-12  Oliver Kiddle  <opk@zsh.org>

	* 11347: Completion/Builtins/_hash, Completion/Builtins/_vars_eq:
	use _arguments for hash completion and add + options for typeset

2000-05-12  Sven Wischnowsky  <wischnow@zsh.org>

	* 11346: Src/Zle/compmatch.c, Src/Zle/compresult.c: fixes for
 	completion matching
	
	* 11335: Src/Zle/compcore.c: fix for compadd -x when there are no
 	matches
	
2000-05-11  Bart Schaefer  <schaefer@zsh.org>

	* 11332: Completion/Commands/_complete_debug: Test descriptors